# sol-seeker

./: .eslintrc.json  .gitignore  AGENTS-AUDIT.md  AGENTS.md  Dockerfile  LICENSE  OPERATIONS.md  README.md  constraints.txt  features.yaml  jest.config.cjs  package-lock.json  package.json  pyproject.toml  requirements.txt
.github/workflows/: agent_push.yml
docs/: README.md  backtest.md  dashboard_performance.md  demo_mode.md  feature_engine.md  operational_gaps.md  performance.md  publisher.md  risk_manager.md
proto/: event.proto
rustcore/: Cargo.toml  build.rs
rustcore/benches/: feature_perf.rs
rustcore/src/: event.rs  features.rs  functors.rs  lib.rs  welford.rs
src/: __init__.py  main.py  server.py
src/backtest/: __init__.py  runner.py
src/rustcore/: __init__.py
src/sol_seeker/: __init__.py
src/solbot/: __init__.py  bootstrap.py  types.py
tests/: __init__.py  conftest.py  test_backtest.py  test_backtest_ws_close.py  test_config.py  test_data.py  test_engine.py  test_engine_start_stop.py  test_feature_engine.py  test_features.py  test_fees.py  test_license.py  test_market_active_endpoint.py  test_mev_alpha_endpoints.py  test_network_poller.py  test_oracle.py  test_perf.py  test_position_update.py  test_price_endpoint.py  test_publisher.py  test_risk.py  test_risk_pnl.py  test_risk_portfolio_endpoint.py  test_risk_var.py  test_rug_detector.py  test_schema.py  test_sentiment_endpoints.py  test_server.py  test_server_state.py  test_service.py  test_slippage.py  test_state_persistence.py  test_strategy.py  test_strategy_breakdown.py  test_strategy_matrix_endpoint.py  test_strategy_performance_endpoint.py  test_strategy_performance_matrix.py  test_syschecks.py  test_token_scanner.py  test_volume_metrics.py
tests/fixtures/: sample_trades.csv
web/: README.md  jest.config.cjs  package-lock.json  package.json  tsconfig.test.json  vite.config.ts
web/public/: dashboard.css  dashboard.html  dashboard_api_audit.md  disclaimer.html  mev.html  openapi.json  sentiment.html  settings.html  (+2 more)
(+89 files in other folders)
