[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
license = "Proprietary"
name = "sol-bot"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "websockets>=10",
    "solana>=0.30",
    "cryptography==45.0.5",
    "fastapi==0.105.0",
    "uvicorn==0.23.0",
    "prometheus-fastapi-instrumentator==6.1.0",
]
