[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
license = "Proprietary"
name = "sol-bot"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "websockets>=10",
    "solana>=0.30",
    "cryptography==45.0.5",
    "fastapi==0.105.0",
    "uvicorn==0.23.0",
    "prometheus-fastapi-instrumentator==6.1.0",
    "prometheus-client>=0.16",
    "sqlmodel==0.0.8",
    "httpx==0.24.1",
    "ntplib==0.4.0",
    "pytest-benchmark>=3.4",
    "protobuf>=4.24",
    "pyyaml>=6.0",
    "numpy>=1.21",
    "PyJWT>=2.8.0",
]
